# python-best-practices-cookiecutter

./: .dockerignore  LICENSE  README.md  bls.ipynb  bls_ooh_1.ipynb  cookiecutter.json  setup.cfg
hooks/: post_gen_project.py  pre_gen_project.py
licenses/: apl-2.0  bsd-3-clause  mit
{{cookiecutter.repo_name}}/: .coveragerc  .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: publish-docker.yml  test.yml
{{cookiecutter.repo_name}}/test/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __main__.py  {{cookiecutter.repo_name}}.py
