[metadata]
name = {{cookiecutter.project_name}}
description =
author = {{cookiecutter.author_name}}
version = 0.1.0
url = {{cookiecutter.project_url}}
long_description = file: README.md
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >= 3.9
test_suite = tests/

[options.packages.find]
where = .

[options.entry_points]
console_scripts =

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = {{cookiecutter.line_length}}

[mypy]
files = {{cookiecutter.repo_name}}, tests
ignore_missing_imports = true

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = {{cookiecutter.line_length}}
max-complexity = 18
select = B,C,E,F,W,T4

[pylint]
max-line-length={{cookiecutter.line_length}}

[pylint:messages_control]
disable = C0330, C0326

[tool:pytest]
testpaths = tests/
